# NetCompression

./: .gitignore  LICENSE  README.md  Untitled.ipynb  cifar-10.ipynb  cifar-100.ipynb  net.onnx  training.ipynb
arduino/: Cargo.toml  avr-atmega32u4.json  pro-micro-runner.sh
arduino/.cargo/: config
arduino/src/: main.rs
arduino_net/: Cargo.toml  arduino_net.elf  avr-atmega328p.json
arduino_net/src/: main.rs
embedded_net/: Cargo.toml  build.rs  runner.sh
embedded_net/src/: main copy.rs  main.rs  serial.rs
embedded_net/training_data/: fc1_weights.pkl  fc2_weights.pkl
embnet/: Cargo.toml
embnet/embnet_macros/: Cargo.toml
embnet/embnet_macros/src/: lib.rs
embnet/src/: lib.rs
embnet/test_crate/: Cargo.toml  build.rs
embnet/test_crate/src/: main.rs
longan_net/: Cargo.toml  build.rs  dump  out
longan_net/.cargo/: config
longan_net/src/: main.rs  serial.rs
net_processing/: Cargo.toml
net_processing/training_data/: conv3_weights.pkl
net_test/: Cargo.toml  im.rs
net_test/src/: main.rs
serial_send/: Cargo.toml
serial_send/src/: main.rs
sparse_embedded/: Cargo.toml
sparse_embedded/src/: lib.rs
sparse_embedded/src/ops/: axis_op.rs  conv_unary.rs  konst.rs  map.rs  matmul.rs  maxpool.rs  mod.rs
training_data/: conv1_bias.pkl  conv1_weights.pkl  conv2_bias.pkl  conv2_weights.pkl  conv3_bias.pkl  conv3_weights.pkl  fc1_bias.pkl  fc1_weights.pkl  fc2_bias.pkl  fc2_weights.pkl
