[package]
name = "arduino"
version = "0.1.0"
authors = ["Timothée Le Berre <timothee.le.berre@ens.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
atmega32u4-hal = { git = "https://github.com/Rahix/avr-hal" }
avr-hal-generic = { git = "https://github.com/Rahix/avr-hal" }
sparkfun-pro-micro = {git = "https://github.com/Rahix/avr-hal"}
panic-halt = "0.2.0"
nb = "0.1.2"
ufmt = "0.1.0"
avr-device = "0.2.1"

