[package]
name = "arduino_net"
version = "0.1.0"
authors = ["Timothée Le Berre <timothee.le.berre@ens.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
# A panic handler is needed.  This is a crate with the most basic one.
panic-halt = "0.2.0"

[dependencies.arduino-uno]
git = "https://github.com/Rahix/avr-hal"
