[package]
name = "embnet"
version = "0.1.0"
authors = ["Timothée Le Berre <timothee.le.berre@ens.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sparse_embedded = {path = "../sparse_embedded"}
tract-onnx = "0.12.5"
tract-core = "0.12.5"
embnet_macros = {path = "embnet_macros"}
