[package]
name = "longan_net"
version = "0.1.0"
authors = ["Timothée Le Berre <timothee.le.berre@ens.fr>"]
edition = "2018"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 3
lto = "fat"
codegen-units=1

[dependencies]
gd32vf103xx-hal = "0.4.0"
nb = "0.1.2"
riscv = "0.6.0"
riscv-rt = "0.8.0"
panic-halt = "0.2.0"
longan-nano = {git = "https://github.com/riscv-rust/longan-nano"}
sparse_embedded = {path="../sparse_embedded"}
embnet_macros = {path="../embnet/embnet_macros"}

[build-dependencies]
embnet = {path="../embnet/"}
sparse_embedded = {path="../sparse_embedded/"}