[package]
name = "net_test"
version = "0.1.0"
authors = ["Timothée Le Berre <timothee.le.berre@ens.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3
lto = "fat"
codegen-units=1
debug=1


[dependencies]
sparse_embedded = {path="../sparse_embedded"}
mnist = "0.4.1"