[package]
name = "serial_send"
version = "0.1.0"
authors = ["Timothée Le Berre <timothee.le.berre@ens.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
text_io = "0.1.8"
minifb = "0.19.1"
mnist = {version="0.4.1", features = ["download"]}
serial = "0.4.0"
rand = ""
sparse_embedded = {path = "../sparse_embedded"}
colour = "0.5.0"